Function for interaction with server was added.

--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -44,7 +44,7 @@
                                         strValue = cells[row, col].Value.ToString();
                                     }
                                 }
-                                <input type="number" class="sudoku-cell" id="@row,@col" value="@strValue" min=0 max=9/>
+                                <input type="number" class="sudoku-cell" id="@row,@col" value="@strValue"/>
                             </td>
                         }
                     </tr>
