The verification logic of field has been moved to server.

--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -11,8 +11,7 @@
             <button class="button signup-button" id="signUpButton">SignUp</button>
         </div>
     </div>
-    <div>
-        <table class="sudoku-field" id="field"></table>
+    <div id="field-container">
     </div>
 
 <script src="~/js/signalr/dist/browser/signalr.js"></script>
