--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -70,7 +70,7 @@ body {
   line-height: 60px; /* Vertically center the text there */
 }
 
-.sudoku-cell.error {
+.sudoku-cell.competting {
   color: red;
 }
 
